--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container" id="question-section">
             <div class="question">
                 <p id="riddle">Question.</p>
-                <p>What has a neck but no head ?</p>
+                <p>I'm often served but never eaten. What am I? ?</p>
             </div>
             <div class="Answer">
                 <label for="answer">Your Answer:</label>
